--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "tv shows api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "cross-env NODE_ENV=production node server",
+    "dev": "cross-env NODE_ENV=development nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,20 @@
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.15.0",
-    "nodemon": "^3.1.9",
+    "mongoose": "^8.13.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validatorjs": "^3.22.1"
   },
@@ -28,5 +37,9 @@
   "bugs": {
     "url": "https://github.com/karim1311/cse341-project2/issues"
   },
-  "homepage": "https://github.com/karim1311/cse341-project2#readme"
+  "homepage": "https://github.com/karim1311/cse341-project2#readme",
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.9"
+  }
 }
