--- a/package.json
+++ b/package.json
@@ -13,22 +13,16 @@
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
-    "method-override": "^3.0.0",
-    "moment": "^2.30.1",
-    "mongodb": "^6.15.0",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.13.1",
-    "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "validatorjs": "^3.22.1"
+    "swagger-ui-express": "^5.0.1"
   },
   "repository": {
     "type": "git",
