--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node server",
-    "dev": "cross-env NODE_ENV=development nodemon server"
+    "dev": "cross-env NODE_ENV=development nodemon server",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
   "homepage": "https://github.com/karim1311/cse341-project2#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
